hm4/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-chart-deploy
spec:
  selector:
    matchLabels:
      app: user-service-chart
  replicas: 2
  template:
    metadata:
      labels:
        app: user-service-chart
    spec:
      containers:
        - name: user
          image: franticmax/user-service-chart:latest
          ports:
            - containerPort: 8080
