hm4/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-chart-svc
spec:
  selector:
    app: user-service-chart
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type:
    ClusterIP
