hm4/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: user-service-chart-ingress
    labels:
      app: ingress-nginx
spec:
    ingressClassName: nginx
    rules:
      - host: arch.homework
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: user-service-chart-svc
                  port:
                    number: 8080
